--- a/.github/workflows/update-website.yml
+++ b/.github/workflows/update-website.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
       with:
-        token: ${{ secrets.CI_TOKEN }}
+        token: ${{ github.token }}
         submodules: true
 
     # Update references
